--- a/spring-boot/src/main/resources/application.properties
+++ b/spring-boot/src/main/resources/application.properties
@@ -1,1 +1,9 @@
+server.port=9000
 
+spring.h2.console.enabled=true
+
+spring.datasource.url=jdbc:h2:mem:isildb;DB_CLOSE_DELAY=-1
+spring.datasource.username=isil
+spring.datasource.password=isil
+
+spring.jpa.show-sql=true
