-add module-client

--- a/pom.xml
+++ b/pom.xml
@@ -8,8 +8,14 @@
     <artifactId>intg-parcial</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <properties>
+        <maven.compiler.source>11</maven.compiler.source>
+        <maven.compiler.target>11</maven.compiler.target>
+    </properties>
+
     <modules>
         <module>spring-boot</module>
+        <module>spring-boot-client</module>
     </modules>
 
     <packaging>pom</packaging>
